force-app/main/default/objects/Governance_Notification__c/Governance_Notification__c.object-meta.xml
<CustomObject>
    <description>Durable delivery record for an Org Monitor Slack or Microsoft Teams notification.</description>
    <label>Governance Notification</label>
    <nameField>
        <displayFormat>GN-{00000000}</displayFormat>
        <label>Notification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Governance Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>