force-app/main/default/objects/Governance_Notification__c/fields/Actor_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Actor_Identifier__c</fullName>
    <label>Actor Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>