force-app/main/default/objects/Governance_Notification__c/fields/Change_Count__c.field-meta.xml
<CustomField>
    <fullName>Change_Count__c</fullName>
    <label>Change Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>