force-app/main/default/objects/Governance_Notification__c/fields/Content_Format__c.field-meta.xml
<CustomField>
    <fullName>Content_Format__c</fullName>
    <label>Content Format</label>
    <length>30</length>
    <type>Text</type>
</CustomField>