force-app/main/default/objects/Governance_Notification__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <label>Correlation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>