force-app/main/default/objects/Governance_Notification__c/fields/Delivered_At__c.field-meta.xml
<CustomField>
    <fullName>Delivered_At__c</fullName>
    <label>Delivered At</label>
    <type>DateTime</type>
</CustomField>