force-app/main/default/objects/Governance_Notification__c/fields/Destination_Id__c.field-meta.xml
<CustomField>
    <fullName>Destination_Id__c</fullName>
    <label>Destination ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>