force-app/main/default/objects/Governance_Notification__c/fields/Destination_Name__c.field-meta.xml
<CustomField>
    <fullName>Destination_Name__c</fullName>
    <label>Destination Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>