force-app/main/default/objects/Governance_Notification__c/fields/Fallback_Text__c.field-meta.xml
<CustomField>
    <fullName>Fallback_Text__c</fullName>
    <label>Accessible Fallback Text</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>