force-app/main/default/objects/Governance_Notification__c/fields/Next_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Next_Attempt__c</fullName>
    <label>Next Attempt</label>
    <type>DateTime</type>
</CustomField>