force-app/main/default/objects/Governance_Notification__c/fields/Team_Id__c.field-meta.xml
<CustomField>
    <fullName>Team_Id__c</fullName>
    <label>Team ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>